--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,6 +104,17 @@ android {
     }
 }
 
+allprojects {
+
+    repositories { /* ... */ }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'com.facebook.react:react-native:0.63.4'
+        }
+    }
+}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
